--- a/data/designer.yml
+++ b/data/designer.yml
@@ -1,2 +1,2 @@
-name: Weru
-url: https://www.linkedin.com/in/dan-weru-profile/
+name: hugo-swift-theme
+url: https://github.com/onweru/hugo-swift-theme
