--- a/data/authors.yml
+++ b/data/authors.yml
@@ -1,4 +1,4 @@
 - name: weru
   twitter: onweru
   photo: 'weru.jpg'
-  url: https://www.github.com/yezihacks
+  url: https://www.github.com/yezihack
