--- a/data/authors.yml
+++ b/data/authors.yml
@@ -1,4 +1,4 @@
-- name: weru
-  twitter: onweru
-  photo: 'weru.jpg'
+- name: baili
+  twitter: baili
+  photo: 'baili.jpg'
   url: https://www.github.com/yezihack
