--- a/config.toml
+++ b/config.toml
@@ -115,7 +115,7 @@ defaultContentLanguage = "zh-cn"  # 默认使用的语言
   # Link custom CSS and JS assets
   #   (relative to /static/css and /static/js respectively)
   customCSS = ["toc.css"]            # if ['custom.css'], load '/static/css/custom.css' file
-  customJS = []             # if ['custom.js'], load '/static/js/custom.js' file
+  customJS = ["baidu.js"]             # if ['custom.js'], load '/static/js/custom.js' file
 
   # enable 'fork me on github', see https://blog.github.com/2008-12-19-github-ribbons/
   # forkMeOnGithub = "https://github.com/yezihack"
