--- a/config.toml
+++ b/config.toml
@@ -87,6 +87,12 @@ defaultContentLanguage = "zh-cn"  # 默认使用的语言
   url = "/tags/prometheus.html"
 [[menu.main]]
   parent = "教程"
+  name = "ELK"
+  weight = 10
+  identifier = "ELK"
+  url = "/tags/elk.html"
+[[menu.main]]
+  parent = "教程"
   name = "设计模式"
   weight = 15
   identifier = "design"
