--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,28 +2,34 @@
 
 name: Github-Pages
 
-on: 
-  push:
-    branches: 
+on: # 触发条件
+  push: # push 
+    branches:  # 分支名称
       - src
 
 jobs:
   blog_jobs:
     name: build to blog
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-18.04 # 设置运行环境
     
     # 要执行的步骤
     steps:
       - uses: actions/checkout@v2
         with:
           submodules: true
-      - name: Setup Hugo
+
+      - name: Setup Hugo  # 安装 hugo
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: '0.79.1'
           extended: true
-      - name: Build
+
+      - name: Build # 编译站点
         run: hugo --gc --minify --cleanDestinationDir  # 自己寫執行的步驟
+
+      - name: copy file # 复制CNAME文件，用于绑定域名
+        run: |
+          cp -f CNAME public/
         
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
