--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: copy file # 复制CNAME文件，用于绑定域名
         run: |
-          cp -f CNAME public/
+          cp -f CNAME ./public
         
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
