--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,4 @@
 # This is a basic workflow to help you get started with Actions
-
 name: Github-Pages
 
 on: # 触发条件
@@ -30,6 +29,7 @@ jobs:
       - name: copy file # 复制CNAME文件，用于绑定域名
         run: |
           cp -f CNAME ./public
+          cp README.md ./public
         
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
