--- a/config.toml
+++ b/config.toml
@@ -10,6 +10,7 @@ copyright = "[CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0
 
 # 主题选择
 theme = "meme"
+# theme = "github.com/reuixiy/hugo-theme-meme"
 
 # `hugo new` 新建文章自动打开的文本编辑器
 newContentEditor = ""
@@ -169,7 +170,7 @@ uglyURLs = true # 是否开启html
 [outputs]
     page = ["HTML"]
     # home = ["HTML", "SectionsAtom", "SectionsRSS", "SearchIndex", "Algolia"]
-    home = ["HTML", "SectionsAtom", "SectionsRSS"]
+    home = ["HTML", "SectionsAtom", "SectionsRSS", "SearchIndex"]
     section = ["HTML"]
     taxonomy = ["HTML"]
     term = ["HTML"]
@@ -240,10 +241,10 @@ uglyURLs = true # 是否开启html
     [[menu.main]]
         weight = 7
         identifier = "lang-switcher"
-    # [[menu.main]]
-    #     weight = 8
-    #     identifier = "search"
-    #     post = "search"
+    [[menu.main]]
+        weight = 8
+        identifier = "search"
+        post = "search"
 
 
 
@@ -1366,7 +1367,7 @@ uglyURLs = true # 是否开启html
 
     # 说明：需要开启 `SearchIndex` 的输出
 
-    enableLunrSearch = false
+    enableLunrSearch = true
     # 说明：https://lunrjs.com/
 
 
