--- a/.github/workflows/gh-page.yml
+++ b/.github/workflows/gh-page.yml
@@ -16,18 +16,20 @@ jobs:
       group: ${{ github.workflow }}-${{ github.ref }}
     # 要执行的步骤
     steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: true
+      # - uses: actions/checkout@v2
+      #   with:
+      #     submodules: true
 
       - name: Setup Hugo  # 安装 hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.85.0'
+          # hugo-version: '0.85.0'
+          hugo-version: 'latest'
           extended: true
 
       - name: Build # 编译站点
         run: hugo --minify # 自己寫執行的步驟
+        # run: hugo --gc --minify --cleanDestinationDir --baseURL="https://www.sgfoot.com/"
 
       - name: copy file # 复制CNAME文件，用于绑定域名
         run: |
