--- a/config.toml
+++ b/config.toml
@@ -105,7 +105,7 @@ defaultContentLanguage = "zh-cn"  # 默认使用的语言
   url = "/tags/kubernetes.html"
 [[menu.main]]
   parent = "教程"
-  name = "运维笔记(GITOPS)"
+  name = "云运维笔记"
   weight = 16
   identifier = "devops"
   url = "/tags/运维笔记.html"
