--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on: # 触发条件
 jobs:
   blog_jobs:
     name: build to blog
-    runs-on: ubuntu-18.04 # 设置运行环境
+    runs-on: ubuntu-latest # 设置运行环境
     
     # 要执行的步骤
     steps:
