--- a/.github/workflows/gh-page.yml
+++ b/.github/workflows/gh-page.yml
@@ -24,8 +24,9 @@ jobs:
         uses: peaceiris/actions-hugo@v2
         with:
           # hugo-version: '0.85.0'
-          hugo-version: 'latest'
-          extended: true
+          # hugo-version: 'latest'
+          hugo-version: '0.119.0'
+          extended: false
 
       - name: Build # 编译站点
         run: hugo --minify # 自己寫執行的步驟
