--- a/.github/workflows/gh-page.yml
+++ b/.github/workflows/gh-page.yml
@@ -29,9 +29,7 @@ jobs:
           extended: false
 
       - name: Build # 编译站点
-        run: |
-          ls -l
-          hugo --gc --minify --cleanDestinationDir --config hugo.toml # 自己寫執行的步驟
+        run: hugo --gc --minify --cleanDestinationDir
         # run: hugo --gc --minify --cleanDestinationDir --baseURL="https://www.sgfoot.com/"
 
       - name: copy file # 复制CNAME文件，用于绑定域名
