--- a/.github/workflows/gh-page.yml
+++ b/.github/workflows/gh-page.yml
@@ -5,38 +5,28 @@ on: # 触发条件
   push: # push 
     branches:  # 分支名称
       - blog-poison
-
 jobs:
-  blog_jobs:
-    name: build to blog
-    runs-on: ubuntu-20.04 # 设置运行环境
-    permissions:
-      contents: write
-    concurrency:
-      group: ${{ github.workflow }}-${{ github.ref }}
-    # 要执行的步骤
+  deploy:
+    runs-on: ubuntu-20.04
     steps:
-      # - uses: actions/checkout@v2
-      #   with:
-      #     submodules: true
+      - uses: actions/checkout@v2
+        with:
+          submodules: true  # Fetch Hugo themes (true OR recursive)
+          fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
 
-      - name: Setup Hugo  # 安装 hugo
+      - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          # hugo-version: '0.85.0'
-          # hugo-version: 'latest'
-          hugo-version: '0.119.0'
-          extended: false
+          hugo-version: 'latest'
+          # extended: true
 
-      - name: Build # 编译站点
-        run: hugo --gc --minify --cleanDestinationDir
-        # run: hugo --gc --minify --cleanDestinationDir --baseURL="https://www.sgfoot.com/"
+      - name: Build
+        run: hugo --minify
 
       - name: copy file # 复制CNAME文件，用于绑定域名
         run: |
-          # cp -f CNAME ./public
           cp README.md ./public
-        
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
