--- a/hugo.toml
+++ b/hugo.toml
@@ -16,7 +16,8 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
     # favicon = "favicon.png"             # path to favicon (defaults to favicon.png)
     hideToc = false
 
-    front_page_content = ["posts"] # Equivalent to the default value, add page bundle names to include them on the front page.
+    front_page_content = ["posts", "tags", "about"] # Equivalent to the default value, add page bundle names to include them on the front page.
+
 
     # MENU PLACEHOLDER
     # Menu dict keys:
@@ -27,7 +28,6 @@ pluralizelisttitles = false   # removes the automatically appended "s" on sideba
     menu = [      
         {Name = "Home", URL = "/posts/", Pre = "Recent", HasChildren = true, Limit = 5},
         {Name = "Tags", URL = "/tags/", Pre = "Recent", HasChildren = false, Limit = 5},
-        {Name = "Projects", URL = "/projects/"},
         {Name = "About", URL = "/about/", HasChildren = false},
     ]
 
