--- a/.github/workflows/gh-page.yml
+++ b/.github/workflows/gh-page.yml
@@ -1,5 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-name: Github-Pages
+name: Github-Pages-Poison
 
 on: # 触发条件
   push: # push 
@@ -9,10 +9,10 @@ jobs:
   deploy:
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: true  # Fetch Hugo themes (true OR recursive)
-          fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
+      # - uses: actions/checkout@v2
+        # with:
+        #   submodules: true  # Fetch Hugo themes (true OR recursive)
+        #   fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
