--- a/.github/workflows/gh-page.yml
+++ b/.github/workflows/gh-page.yml
@@ -18,5 +18,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
-          publish_branch: gh-pages
+          publish_branch: pages-poison
           force_orphan: true
