--- a/.github/workflows/gh-page.yml
+++ b/.github/workflows/gh-page.yml
@@ -14,9 +14,7 @@ jobs:
     steps:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
-        # if: github.ref == 'refs/heads/pages-poison'
+        if: github.ref == 'refs/heads/pages-poison'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
-          publish_branch: pages-poison
-          force_orphan: true
