--- a/.github/workflows/copy.yml
+++ b/.github/workflows/copy.yml
@@ -15,10 +15,10 @@ jobs:
         
       - name: Copy Public Directory to Branch
         run: |
-          # git branch pages-poison  # 创建 pages-poison 分支
-          git checkout pages-poison  # 切换到 pages-poison 分支
+          git branch www-poison  # 创建 pages-poison 分支
+          git checkout www-poison  # 切换到 pages-poison 分支
           git rm -r '*'  # 删除 pages-poison 分支上的所有文件
           cp -r public/* .  # 将 public 目录下的文件复制到 pages-poison 分支的根目录
           git add .  # 添加文件到 pages-poison 分支
           git commit -m "Copy public directory to pages-poison branch"  # 提交更改
-          git push origin pages-poison  # 推送到 pages-poison 分支
+          git push origin www-poison  # 推送到 pages-poison 分支
